<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <Button
        android:id="@+id/animationsID"
        android:text= "Animations"
        android:onClick="animationsClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/librariesActivityID"
        android:text= "@string/libraries_activity"
        android:onClick="librariesClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/fragmentClickID"
        android:text=    "@string/activity_fragments"
        android:onClick="fragmentClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/rippleClickID"
        android:text=    "@string/activity_ripples"
        android:onClick="rippleClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/viewPagerClickID"
        android:text=  "@string/activity_viewpager"
        android:onClick="viewpagerClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>



</LinearLayout>
